@@ -1,6 +1,6 @@
 [mod-setting-name]
 train-rainbow-speed=Rainbow Speed
-train-rainbow-palette=Rainbow Theme
+train-rainbow-theme=Rainbow Theme
 
 [mod-setting-description]
 train-rainbow-speed=Determines how fast to cycle the rainbow colors
@@ -13,8 +13,8 @@ train-rainbow-speed-slow=Slow
 train-rainbow-speed-default=Default
 train-rainbow-speed-fast=Fast
 train-rainbow-speed-veryfast=Very Fast
-train-rainbow-palette-pastel=Pastel
-train-rainbow-palette-light=Light
-train-rainbow-palette-default=Default
-train-rainbow-palette-vibrant=Dark
-train-rainbow-palette-deep=Deep
+train-rainbow-theme-pastel=Pastel
+train-rainbow-theme-light=Light
+train-rainbow-theme-default=Default
+train-rainbow-theme-vibrant=Dark
+train-rainbow-theme-deep=Deep
